--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mein Portfolio</title>
+    <title>Jason Nikolaus</title>
     <style>
         /* Füge hier deine CSS-Stile hinzu */
         body {
@@ -92,7 +92,7 @@
 </head>
 <body>
     <header>
-        <h1>Mein Portfolio</h1>
+        <h1>Jason Nikolaus</h1>
     </header>
     
     <nav>
