--- a/index.html
+++ b/index.html
@@ -1,136 +1,1 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jason Nikolaus - Historiker</title>
-    <style>
-        /* Füge hier deine CSS-Stile hinzu */
-        body {
-            font-family: "Times New Roman", serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        nav {
-            background-color: #444;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-            margin: 0 20px;
-            font-size: 18px;
-            transition: color 0.3s ease-in-out;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-            color: #ff9900;
-        }
-
-        .container {
-            max-width: 960px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            font-size: 36px;
-            font-weight: bold;
-            color: #333;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-            color: #555;
-        }
-
-        /* Fade-In-Effekte beim Scrollen */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Animation für die Portfolio-Elemente */
-        .portfolio-item {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-        }
-
-        .portfolio-item.active {
-            animation: fadeIn 0.5s ease-in-out 1 forwards;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Jason Nikolaus</h1>
-    </header>
-    
-    <nav>
-        <a href="#about">Über mich</a>
-        <a href="#portfolio">Forschung</a>
-        <a href="#contact">Kontakt</a>
-    </nav>
-
-    <div class="container" id="about">
-        <h2>Über mich</h2>
-        <p>Ich bin ein Historiker mit Leidenschaft für die Vergangenheit und die Erforschung historischer Ereignisse.</p>
-    </div>
-
-    <div class="container" id="portfolio">
-        <h2>Forschung</h2>
-        <!-- Beispiel für ein Portfolio-Element -->
-        <div class="portfolio-item">
-            <h3>Forschungsprojekt 1</h3>
-            <p>Eine Studie über...</p>
-        </div>
-        <div class="portfolio-item">
-            <h3>Forschungsprojekt 2</h3>
-            <p>Eine Analyse von...</p>
-        </div>
-        <!-- Weitere Portfolio-Elemente hinzufügen -->
-    </div>
-
-    <div class="container" id="contact">
-        <h2>Kontakt</h2>
-        <p>Sie können mich unter jason.nikolaus@email.de erreichen.</p>
-    </div>
-
-    <script>
-        // Füge JavaScript-Code hier hinzu, um die Animationen bei Bedarf auszulösen
-        window.addEventListener('scroll', () => {
-            const containers = document.querySelectorAll('.container');
-            containers.forEach((container) => {
-                const containerTop = container.getBoundingClientRect().top;
-                if (containerTop < window.innerHeight - 100) {
-                    container.classList.add('active');
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+Hello World!
